--- a/arch/arm64/configs/oppo6765_defconfig
+++ b/arch/arm64/configs/oppo6765_defconfig
@@ -97,7 +97,7 @@ CONFIG_MEDIATEK_SOLUTION=y
 CONFIG_MTK_PLATFORM="mt6765"
 CONFIG_ARCH_MTK_PROJECT="oppo6765"
 CONFIG_MTK_GPT_SCHEME_SUPPORT=y
-CONFIG_MTK_IO_BOOST=y
+CONFIG_MTK_IO_BOOST=n
 CONFIG_MTK_PID_MAP=y
 CONFIG_MTK_FREQ_HOPPING=y
 CONFIG_MTK_CPU_FREQ=y
@@ -515,7 +515,7 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_OPPO_COMMON_SOFT=y
 CONFIG_OPPO_DEVICE_IFNO=y
 #Add heathinfo
-CONFIG_OPPO_MEM_MONITOR=y
+CONFIG_OPPO_MEM_MONITOR=n
 CONFIG_OPPO_FG_OPT=y
 #ifdef VENDOR_EDIT
 CONFIG_OPPO_HEALTHINFO=y
@@ -714,11 +714,17 @@ CONFIG_SECTION_MISMATCH_WARN_ONLY=n
 CONFIG_BOEFFLA_WL_BLOCKER=y
 
 
+CONFIG_OPPO_HYPNUS=n
+CONFIG_OPPO_HEALTHINFO=n
+CONFIG_OPPO_SHUTDOWN_DETECT=n
+CONFIG_OPPO_PHOENIX=n
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_OPPO_BUILD_USER=y
 
-
-
-
-
+CONFIG_PAGE_OWNER=n
+CONFIG_PAGE_EXTENSION=n
+CONFIG_DEBUG_LIST=n
+CONFIG_ZRAM_WRITEBACK=y
 
 
 
