--- a/drivers/misc/mediatek/connectivity/bt/mt66xx/legacy/Makefile
+++ b/drivers/misc/mediatek/connectivity/bt/mt66xx/legacy/Makefile
@@ -4,11 +4,9 @@
 ###############################################################################
 # Necessary Check
 
-ifeq ($(AUTOCONF_H),)
-    $(error AUTOCONF_H is not defined)
-endif
+ccflags-y += -imacros $(KERNEL_OUT)/include/generated/autoconf.h
 
-ccflags-y += -imacros $(AUTOCONF_H)
+
 
 # Force build fail on modpost warning
 KBUILD_MODPOST_FAIL_ON_WARNINGS := y
