--- a/drivers/misc/mediatek/connectivity/gps/Makefile
+++ b/drivers/misc/mediatek/connectivity/gps/Makefile
@@ -12,11 +12,9 @@
 ###############################################################################
 # Necessary Check
 
-ifeq ($(AUTOCONF_H),)
-    $(error AUTOCONF_H is not defined)
-endif
+ccflags-y += -imacros $(KERNEL_OUT)/include/generated/autoconf.h
 
-ccflags-y += -imacros $(AUTOCONF_H)
+
 
 ifeq ($(TARGET_BUILD_VARIANT),$(filter $(TARGET_BUILD_VARIANT),userdebug user))
     ldflags-y += -s
