--- a/arch/arm64/configs/oppo6765_defconfig
+++ b/arch/arm64/configs/oppo6765_defconfig
@@ -691,7 +691,7 @@ CONFIG_MTK_SYSTRACKER_V2=n
 CONFIG_HMP_TRACER=n
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=n
 CONFIG_MTK_LOAD_BALANCE_ENHANCEMENT=n
-CONFIG_MODVERSIONS=n
+CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=n
 CONFIG_MTK_FPSGO_V3=y
 CONFIG_MTK_FPSGO=n
